--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>v2-mf-template</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />        
+
+        <title>SYNERGY LK REMOTE</title>
+    </head>
+
+    <body>
+        <div id="app"></div>
+    </body>
 </html>
